tests/invalid/runtime/math_type_error.pts
import Math;

function main() : void {
    Math.abs("x");
}
